<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#89CFF0"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textMainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mainTitle"
            android:textColor="#00A000"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="26dp" />

        <TextView
            android:id="@+id/textMainSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mainSubTitle"
            android:textColor="#008500"
            android:textSize="28sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textColor="#A00000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:inputType="text"
            android:hint="@string/hintName"
            android:textColorHint="#1C1C1C"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/buttonCreateMessageActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCreateMessageActivity"
            android:textSize="12sp"
            android:onClick="onClickCreateMessage"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="100dp">

            <EditText
                android:id="@+id/textHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintHeight"
                android:inputType="numberDecimal"
                android:textColorHint="#1C1C1C"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/textWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintWeight"
                android:inputType="numberDecimal"
                android:textColorHint="#1C1C1C"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnCalculateBMIActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnCalculateBMIActivity"
                android:textSize="12sp"
                android:onClick="onClickCalculateBMI" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>